Fix spacing, layout for info section

--- a/style.css
+++ b/style.css
@@ -166,3 +166,40 @@ h2 {
   min-width: 0;
   flex: 1 1 0;
 }
+
+/* Info Container */
+.info-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border: 4px solid #3882f6;
+  border-radius: 12px;
+}
+
+.info-section-title {
+  padding-top: 48px;
+}
+
+.info-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 48px 0 120px;
+}
+
+.info-list-item {
+  display: flex;
+  flex-direction: column;
+
+  flex-basis: 200px;
+  align-items: center;
+  gap: 8px;
+}
+.info-list-desc {
+  text-align: center;
+}
